CSignal/CSignal/signal/parse/signal.output
Terminals which are not used

   COMMA_OPT
   BIT_AND
   BIT_OR
   LSB
   RSB
   NONAME


State 47 conflicts: 2 shift/reduce
State 68 conflicts: 2 shift/reduce


Grammar

    0 $accept: compilation_unit $end

    1 compilation_unit: program
    2                 | error '\n'

    3 program: stmt_list
    4        | import
    5        | namespace_decl
    6        | function_define

    7 namespace_decl: NAMESPACE namespace_path namespace_body

    8 namespace_body: LCB namespace_member_decl_optional RCB

    9 namespace_member_decl: NAMESPACE namespace_path namespace_body
   10                      | class_decl
   11                      | interface_decl
   12                      | enum_decl

   13 namespace_member_decl_list: namespace_member_decl
   14                           | namespace_member_decl_list namespace_member_decl

   15 namespace_member_decl_optional: /* empty */
   16                               | namespace_member_decl_list

   17 namespace_path: IDENT
   18               | namespace_path DOT IDENT

   19 import: IMPORT STRING_LITERAL

   20 parameterized_typename: IDENT type_parameter_group

   21 type_parameter_group: /* empty */
   22                     | LT type_parameter_list GT

   23 type_parameter_list: type_parameter
   24                    | type_parameter_list COMMA type_parameter

   25 type_parameter: IDENT type_parameter_rule_list
   26               | IN IDENT type_parameter_rule_list
   27               | OUT IDENT type_parameter_rule_list

   28 type_parameter_rule_list: /* empty */
   29                         | LRB typename_list RRB

   30 class_decl: CLASS parameterized_typename LCB access_member_tree_opt RCB
   31           | CLASS parameterized_typename COLON typename_list LCB access_member_tree_opt RCB

   32 enum_decl: ENUM IDENT LCB ident_list RCB
   33          | ENUM IDENT LCB ident_list COMMA RCB

   34 interface_decl: INTERFACE parameterized_typename LCB access_member_tree_opt RCB
   35               | INTERFACE parameterized_typename COLON typename_list LCB access_member_tree_opt RCB

   36 access_member_tree_opt: /* empty */
   37                       | access_member_tree

   38 access_member_tree: access_member_list
   39                   | access_member_tree access_member_list

   40 access_member_list: access_level_T COLON member_define_list

   41 member_define_list: member_define
   42                   | member_define_list member_define

   43 member_define: constructor_define
   44              | method_define
   45              | field_define

   46 constructor_define: CTOR NEW LRB parameter_list RRB constructor_chain_optional scope_optional
   47                   | CTOR NEW LRB RRB constructor_chain_optional scope_optional

   48 constructor_chain: COLON constructor_chain_type_T LRB argument_list RRB
   49                  | COLON constructor_chain_type_T LRB RRB

   50 constructor_chain_type_T: SUPER
   51                         | THIS

   52 constructor_chain_optional: /* empty */
   53                           | constructor_chain

   54 function_define: DEF IDENT LRB parameter_list RRB ARROW typename_T scope_optional
   55                | DEF IDENT LRB RRB ARROW typename_T scope_optional

   56 method_define: modifier_type_T DEF IDENT type_parameter_group LRB parameter_list RRB ARROW typename_T scope_optional
   57              | modifier_type_T DEF IDENT type_parameter_group LRB RRB ARROW typename_T scope_optional

   58 field_define: modifier_type_T typename_T IDENT SEMI

   59 modifier_type_T: /* empty */
   60                | STATIC NATIVE
   61                | NATIVE STATIC
   62                | STATIC
   63                | NATIVE

   64 access_level_T: PUBLIC
   65               | PRIVATE
   66               | PROTECTED

   67 ident_list: IDENT
   68           | ident_list COMMA IDENT

   69 parameter_list: typename_T IDENT
   70               | parameter_list COMMA typename_T IDENT

   71 argument_list: expression
   72              | argument_list COMMA expression

   73 typename_group: /* empty */
   74               | '<' typename_list '>'

   75 typename_list: typename_T
   76              | typename_list COMMA typename_T

   77 typename_T: fqcn_part typename_group

   78 fqcn_part: IDENT
   79          | fqcn_part COLO_COLO IDENT

   80 expression: assign

   81 assign: or
   82       | primary assign_type_T assign

   83 assign_type_T: ASSIGN
   84              | ADD_ASSIGN
   85              | SUB_ASSIGN
   86              | MUL_ASSIGN
   87              | DIV_ASSIGN
   88              | MOD_ASSIGN

   89 or: and
   90   | or LOGIC_OR and

   91 and: equal
   92    | and LOGIC_AND equal

   93 equal: compare
   94      | equal EQUAL compare
   95      | equal NOTEQUAL compare

   96 compare: addsub
   97        | compare GT addsub
   98        | compare GE addsub
   99        | compare LT addsub
  100        | compare LE addsub

  101 addsub: muldiv
  102       | addsub ADD muldiv
  103       | addsub SUB muldiv

  104 muldiv: unary
  105       | muldiv MUL unary
  106       | muldiv DIV unary
  107       | muldiv MOD unary

  108 unary: prefix
  109      | NOT unary
  110      | '-' unary

  111 prefix: postfix
  112       | INC postfix
  113       | DEC postfix

  114 postfix: primary
  115        | primary INC
  116        | primary DEC
  117        | primary AS typename_T

  118 primary: primary_nobrace
  119        | '(' expression ')'

  120 primary_nobrace: primary_literal
  121                | primary_assoc
  122                | THIS
  123                | SUPER
  124                | NEW typename_T LRB argument_list RRB
  125                | NEW typename_T LRB RRB

  126 primary_literal: INT
  127                | DOUBLE
  128                | CHAR_LITERAL
  129                | STRING_LITERAL
  130                | TRUE_TOK
  131                | FALSE_TOK
  132                | NULL_TOK

  133 primary_assoc: primary_faccess
  134              | primary_mcall

  135 primary_faccess: primary DOT IDENT

  136 primary_mcall: primary_maccess typename_group LRB argument_list RRB
  137              | primary_maccess typename_group LRB RRB

  138 primary_maccess: primary_nobrace

  139 stmt_list: stmt
  140          | stmt_list stmt

  141 stmt: expression stmt_term
  142     | variable_decl_stmt
  143     | variable_init_stmt
  144     | inferenced_type_init_stmt
  145     | if_stmt
  146     | while_stmt
  147     | break_stmt
  148     | continue_stmt
  149     | return_stmt
  150     | throw_stmt
  151     | try_stmt

  152 variable_decl_stmt: typename_T IDENT SEMI

  153 variable_init_stmt: typename_T IDENT ASSIGN expression stmt_term

  154 inferenced_type_init_stmt: VAR IDENT ASSIGN expression stmt_term

  155 if_stmt: IF LRB expression RRB scope
  156        | IF LRB expression RRB scope ELSE scope
  157        | IF LRB expression RRB scope elif_list
  158        | IF LRB expression RRB scope elif_list ELSE scope

  159 elif_list: elif
  160          | elif_list elif

  161 elif: ELIF LRB expression RRB scope

  162 while_stmt: WHILE LRB expression RRB scope_optional

  163 break_stmt: BREAK stmt_term

  164 continue_stmt: CONTINUE stmt_term

  165 return_stmt: RETURN expression stmt_term

  166 throw_stmt: THROW expression stmt_term

  167 try_stmt: TRY scope catch_stmt_list

  168 catch_stmt_list: catch_stmt
  169                | catch_stmt_list catch_stmt

  170 catch_stmt: CATCH LRB typename_T IDENT RRB scope

  171 scope: LCB stmt_list RCB
  172      | LCB RCB

  173 scope_optional: SEMI
  174               | scope

  175 stmt_term: SEMI
  176          | /* empty */


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 2
'(' (40) 119
')' (41) 119
'-' (45) 110
'<' (60) 74
'>' (62) 74
error (256) 2
CHAR_LITERAL (258) 128
STRING_LITERAL (259) 19 129
INT (260) 126
DOUBLE (261) 127
IDENT (262) 17 18 20 25 26 27 32 33 54 55 56 57 58 67 68 69 70 78 79
    135 152 153 154 170
DOT (263) 18 135
COMMA (264) 24 33 68 70 72 76
COMMA_OPT (265)
COLON (266) 31 35 40 48 49
COLO_COLO (267) 79
ADD (268) 102
SUB (269) 103
MUL (270) 105
DIV (271) 106
MOD (272) 107
NOT (273) 109
ASSIGN (274) 83 153 154
ADD_ASSIGN (275) 84
SUB_ASSIGN (276) 85
MUL_ASSIGN (277) 86
DIV_ASSIGN (278) 87
MOD_ASSIGN (279) 88
EQUAL (280) 94
NOTEQUAL (281) 95
INC (282) 112 115
DEC (283) 113 116
GT (284) 22 97
GE (285) 98
LT (286) 22 99
LE (287) 100
BIT_AND (288)
LOGIC_AND (289) 92
BIT_OR (290)
LOGIC_OR (291) 90
LCB (292) 8 30 31 32 33 34 35 171 172
RCB (293) 8 30 31 32 33 34 35 171 172
LRB (294) 29 46 47 48 49 54 55 56 57 124 125 136 137 155 156 157 158
    161 162 170
RRB (295) 29 46 47 48 49 54 55 56 57 124 125 136 137 155 156 157 158
    161 162 170
LSB (296)
RSB (297)
SEMI (298) 58 152 173 175
IMPORT (299) 19
VAR (300) 154
THIS (301) 51 122
SUPER (302) 50 123
TRUE_TOK (303) 130
FALSE_TOK (304) 131
NULL_TOK (305) 132
AS (306) 117
INTERFACE (307) 34 35
CLASS (308) 30 31
ENUM (309) 32 33
PUBLIC (310) 64
PRIVATE (311) 65
PROTECTED (312) 66
STATIC (313) 60 61 62
NATIVE (314) 60 61 63
NEW (315) 46 47 124 125
IN (316) 26
OUT (317) 27
CTOR (318) 46 47
DEF (319) 54 55 56 57
ARROW (320) 54 55 56 57
NAMESPACE (321) 7 9
RETURN (322) 165
IF (323) 155 156 157 158
ELIF (324) 161
ELSE (325) 156 158
WHILE (326) 162
BREAK (327) 163
CONTINUE (328) 164
TRY (329) 167
CATCH (330) 170
THROW (331) 166
UMINUS (332)
NONAME (333)


Nonterminals, with rules where they appear

$accept (85)
    on left: 0
compilation_unit (86)
    on left: 1 2, on right: 0
program (87)
    on left: 3 4 5 6, on right: 1
namespace_decl (88)
    on left: 7, on right: 5
namespace_body (89)
    on left: 8, on right: 7 9
namespace_member_decl (90)
    on left: 9 10 11 12, on right: 13 14
namespace_member_decl_list (91)
    on left: 13 14, on right: 14 16
namespace_member_decl_optional (92)
    on left: 15 16, on right: 8
namespace_path (93)
    on left: 17 18, on right: 7 9 18
import (94)
    on left: 19, on right: 4
parameterized_typename (95)
    on left: 20, on right: 30 31 34 35
type_parameter_group (96)
    on left: 21 22, on right: 20 56 57
type_parameter_list (97)
    on left: 23 24, on right: 22 24
type_parameter (98)
    on left: 25 26 27, on right: 23 24
type_parameter_rule_list (99)
    on left: 28 29, on right: 25 26 27
class_decl (100)
    on left: 30 31, on right: 10
enum_decl (101)
    on left: 32 33, on right: 12
interface_decl (102)
    on left: 34 35, on right: 11
access_member_tree_opt (103)
    on left: 36 37, on right: 30 31 34 35
access_member_tree (104)
    on left: 38 39, on right: 37 39
access_member_list (105)
    on left: 40, on right: 38 39
member_define_list (106)
    on left: 41 42, on right: 40 42
member_define (107)
    on left: 43 44 45, on right: 41 42
constructor_define (108)
    on left: 46 47, on right: 43
constructor_chain (109)
    on left: 48 49, on right: 53
constructor_chain_type_T (110)
    on left: 50 51, on right: 48 49
constructor_chain_optional (111)
    on left: 52 53, on right: 46 47
function_define (112)
    on left: 54 55, on right: 6
method_define (113)
    on left: 56 57, on right: 44
field_define (114)
    on left: 58, on right: 45
modifier_type_T (115)
    on left: 59 60 61 62 63, on right: 56 57 58
access_level_T (116)
    on left: 64 65 66, on right: 40
ident_list (117)
    on left: 67 68, on right: 32 33 68
parameter_list (118)
    on left: 69 70, on right: 46 54 56 70
argument_list (119)
    on left: 71 72, on right: 48 72 124 136
typename_group (120)
    on left: 73 74, on right: 77 136 137
typename_list (121)
    on left: 75 76, on right: 29 31 35 74 76
typename_T (122)
    on left: 77, on right: 54 55 56 57 58 69 70 75 76 117 124 125 152
    153 170
fqcn_part (123)
    on left: 78 79, on right: 77 79
expression (124)
    on left: 80, on right: 71 72 119 141 153 154 155 156 157 158 161
    162 165 166
assign (125)
    on left: 81 82, on right: 80 82
assign_type_T (126)
    on left: 83 84 85 86 87 88, on right: 82
or (127)
    on left: 89 90, on right: 81 90
and (128)
    on left: 91 92, on right: 89 90 92
equal (129)
    on left: 93 94 95, on right: 91 92 94 95
compare (130)
    on left: 96 97 98 99 100, on right: 93 94 95 97 98 99 100
addsub (131)
    on left: 101 102 103, on right: 96 97 98 99 100 102 103
muldiv (132)
    on left: 104 105 106 107, on right: 101 102 103 105 106 107
unary (133)
    on left: 108 109 110, on right: 104 105 106 107 109 110
prefix (134)
    on left: 111 112 113, on right: 108
postfix (135)
    on left: 114 115 116 117, on right: 111 112 113
primary (136)
    on left: 118 119, on right: 82 114 115 116 117 135
primary_nobrace (137)
    on left: 120 121 122 123 124 125, on right: 118 138
primary_literal (138)
    on left: 126 127 128 129 130 131 132, on right: 120
primary_assoc (139)
    on left: 133 134, on right: 121
primary_faccess (140)
    on left: 135, on right: 133
primary_mcall (141)
    on left: 136 137, on right: 134
primary_maccess (142)
    on left: 138, on right: 136 137
stmt_list (143)
    on left: 139 140, on right: 3 140 171
stmt (144)
    on left: 141 142 143 144 145 146 147 148 149 150 151,
    on right: 139 140
variable_decl_stmt (145)
    on left: 152, on right: 142
variable_init_stmt (146)
    on left: 153, on right: 143
inferenced_type_init_stmt (147)
    on left: 154, on right: 144
if_stmt (148)
    on left: 155 156 157 158, on right: 145
elif_list (149)
    on left: 159 160, on right: 157 158 160
elif (150)
    on left: 161, on right: 159 160
while_stmt (151)
    on left: 162, on right: 146
break_stmt (152)
    on left: 163, on right: 147
continue_stmt (153)
    on left: 164, on right: 148
return_stmt (154)
    on left: 165, on right: 149
throw_stmt (155)
    on left: 166, on right: 150
try_stmt (156)
    on left: 167, on right: 151
catch_stmt_list (157)
    on left: 168 169, on right: 167 169
catch_stmt (158)
    on left: 170, on right: 168 169
scope (159)
    on left: 171 172, on right: 155 156 157 158 161 167 170 174
scope_optional (160)
    on left: 173 174, on right: 46 47 54 55 56 57 162
stmt_term (161)
    on left: 175 176, on right: 141 153 154 163 164 165 166


state 0

    0 $accept: . compilation_unit $end
    1 compilation_unit: . program
    2                 | . error '\n'
    3 program: . stmt_list
    4        | . import
    5        | . namespace_decl
    6        | . function_define
    7 namespace_decl: . NAMESPACE namespace_path namespace_body
   19 import: . IMPORT STRING_LITERAL
   54 function_define: . DEF IDENT LRB parameter_list RRB ARROW typename_T scope_optional
   55                | . DEF IDENT LRB RRB ARROW typename_T scope_optional
   77 typename_T: . fqcn_part typename_group
   78 fqcn_part: . IDENT
   79          | . fqcn_part COLO_COLO IDENT
   80 expression: . assign
   81 assign: . or
   82       | . primary assign_type_T assign
   89 or: . and
   90   | . or LOGIC_OR and
   91 and: . equal
   92    | . and LOGIC_AND equal
   93 equal: . compare
   94      | . equal EQUAL compare
   95      | . equal NOTEQUAL compare
   96 compare: . addsub
   97        | . compare GT addsub
   98        | . compare GE addsub
   99        | . compare LT addsub
  100        | . compare LE addsub
  101 addsub: . muldiv
  102       | . addsub ADD muldiv
  103       | . addsub SUB muldiv
  104 muldiv: . unary
  105       | . muldiv MUL unary
  106       | . muldiv DIV unary
  107       | . muldiv MOD unary
  108 unary: . prefix
  109      | . NOT unary
  110      | . '-' unary
  111 prefix: . postfix
  112       | . INC postfix
  113       | . DEC postfix
  114 postfix: . primary
  115        | . primary INC
  116        | . primary DEC
  117        | . primary AS typename_T
  118 primary: . primary_nobrace
  119        | . '(' expression ')'
  120 primary_nobrace: . primary_literal
  121                | . primary_assoc
  122                | . THIS
  123                | . SUPER
  124                | . NEW typename_T LRB argument_list RRB
  125                | . NEW typename_T LRB RRB
  126 primary_literal: . INT
  127                | . DOUBLE
  128                | . CHAR_LITERAL
  129                | . STRING_LITERAL
  130                | . TRUE_TOK
  131                | . FALSE_TOK
  132                | . NULL_TOK
  133 primary_assoc: . primary_faccess
  134              | . primary_mcall
  135 primary_faccess: . primary DOT IDENT
  136 primary_mcall: . primary_maccess typename_group LRB argument_list RRB
  137              | . primary_maccess typename_group LRB RRB
  138 primary_maccess: . primary_nobrace
  139 stmt_list: . stmt
  140          | . stmt_list stmt
  141 stmt: . expression stmt_term
  142     | . variable_decl_stmt
  143     | . variable_init_stmt
  144     | . inferenced_type_init_stmt
  145     | . if_stmt
  146     | . while_stmt
  147     | . break_stmt
  148     | . continue_stmt
  149     | . return_stmt
  150     | . throw_stmt
  151     | . try_stmt
  152 variable_decl_stmt: . typename_T IDENT SEMI
  153 variable_init_stmt: . typename_T IDENT ASSIGN expression stmt_term
  154 inferenced_type_init_stmt: . VAR IDENT ASSIGN expression stmt_term
  155 if_stmt: . IF LRB expression RRB scope
  156        | . IF LRB expression RRB scope ELSE scope
  157        | . IF LRB expression RRB scope elif_list
  158        | . IF LRB expression RRB scope elif_list ELSE scope
  162 while_stmt: . WHILE LRB expression RRB scope_optional
  163 break_stmt: . BREAK stmt_term
  164 continue_stmt: . CONTINUE stmt_term
  165 return_stmt: . RETURN expression stmt_term
  166 throw_stmt: . THROW expression stmt_term
  167 try_stmt: . TRY scope catch_stmt_list

    error           shift, and go to state 1
    CHAR_LITERAL    shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    INT             shift, and go to state 4
    DOUBLE          shift, and go to state 5
    IDENT           shift, and go to state 6
    NOT             shift, and go to state 7
    INC             shift, and go to state 8
    DEC             shift, and go to state 9
    IMPORT          shift, and go to state 10
    VAR             shift, and go to state 11
    THIS            shift, and go to state 12
    SUPER           shift, and go to state 13
    TRUE_TOK        shift, and go to state 14
    FALSE_TOK       shift, and go to state 15
    NULL_TOK        shift, and go to state 16
    NEW             shift, and go to state 17
    DEF             shift, and go to state 18
    NAMESPACE       shift, and go to state 19
    RETURN          shift, and go to state 20
    IF              shift, and go to state 21
    WHILE           shift, and go to state 22
    BREAK           shift, and go to state 23
    CONTINUE        shift, and go to state 24
    TRY             shift, and go to state 25
    THROW           shift, and go to state 26
    '-'             shift, and go to state 27
    '('             shift, and go to state 28

    compilation_unit           go to state 29
    program                    go to state 30
    namespace_decl             go to state 31
    import                     go to state 32
    function_define            go to state 33
    typename_T                 go to state 34
    fqcn_part                  go to state 35
    expression                 go to state 36
    assign                     go to state 37
    or                         go to state 38
    and                        go to state 39
    equal                      go to state 40
    compare                    go to state 41
    addsub                     go to state 42
    muldiv                     go to state 43
    unary                      go to state 44
    prefix                     go to state 45
    postfix                    go to state 46
    primary                    go to state 47
    primary_nobrace            go to state 48
    primary_literal            go to state 49
    primary_assoc              go to state 50
    primary_faccess            go to state 51
    primary_mcall              go to state 52
    primary_maccess            go to state 53
    stmt_list                  go to state 54
    stmt                       go to state 55
    variable_decl_stmt         go to state 56
    variable_init_stmt         go to state 57
    inferenced_type_init_stmt  go to state 58
    if_stmt                    go to state 59
    while_stmt                 go to state 60
    break_stmt                 go to state 61
    continue_stmt              go to state 62
    return_stmt                go to state 63
    throw_stmt                 go to state 64
    try_stmt                   go to state 65


state 1

    2 compilation_unit: error . '\n'

    '\n'  shift, and go to state 66


state 2

  128 primary_literal: CHAR_LITERAL .

    $default  reduce using rule 128 (primary_literal)


state 3

  129 primary_literal: STRING_LITERAL .

    $default  reduce using rule 129 (primary_literal)


state 4

  126 primary_literal: INT .

    $default  reduce using rule 126 (primary_literal)


state 5

  127 primary_literal: DOUBLE .

    $default  reduce using rule 127 (primary_literal)


state 6

   78 fqcn_part: IDENT .

    $default  reduce using rule 78 (fqcn_part)


state 7

  108 unary: . prefix
  109      | . NOT unary
  109      | NOT . unary
  110      | . '-' unary
  111 prefix: . postfix
  112       | . INC postfix
  113       | . DEC postfix
  114 postfix: . primary
  115        | . primary INC
  116        | . primary DEC
  117        | . primary AS typename_T
  118 primary: . primary_nobrace
  119        | . '(' expression ')'
  120 primary_nobrace: . primary_literal
  121                | . primary_assoc
  122                | . THIS
  123                | . SUPER
  124                | . NEW typename_T LRB argument_list RRB
  125                | . NEW typename_T LRB RRB
  126 primary_literal: . INT
  127                | . DOUBLE
  128                | . CHAR_LITERAL
  129                | . STRING_LITERAL
  130                | . TRUE_TOK
  131                | . FALSE_TOK
  132                | . NULL_TOK
  133 primary_assoc: . primary_faccess
  134              | . primary_mcall
  135 primary_faccess: . primary DOT IDENT
  136 primary_mcall: . primary_maccess typename_group LRB argument_list RRB
  137              | . primary_maccess typename_group LRB RRB
  138 primary_maccess: . primary_nobrace

    CHAR_LITERAL    shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    INT             shift, and go to state 4
    DOUBLE          shift, and go to state 5
    NOT             shift, and go to state 7
    INC             shift, and go to state 8
    DEC             shift, and go to state 9
    THIS            shift, and go to state 12
    SUPER           shift, and go to state 13
    TRUE_TOK        shift, and go to state 14
    FALSE_TOK       shift, and go to state 15
    NULL_TOK        shift, and go to state 16
    NEW             shift, and go to state 17
    '-'             shift, and go to state 27
    '('             shift, and go to state 28

    unary            go to state 67
    prefix           go to state 45
    postfix          go to state 46
    primary          go to state 68
    primary_nobrace  go to state 48
    primary_literal  go to state 49
    primary_assoc    go to state 50
    primary_faccess  go to state 51
    primary_mcall    go to state 52
    primary_maccess  go to state 53


state 8

  112 prefix: INC . postfix
  114 postfix: . primary
  115        | . primary INC
  116        | . primary DEC
  117        | . primary AS typename_T
  118 primary: . primary_nobrace
  119        | . '(' expression ')'
  120 primary_nobrace: . primary_literal
  121                | . primary_assoc
  122                | . THIS
  123                | . SUPER
  124                | . NEW typename_T LRB argument_list RRB
  125                | . NEW typename_T LRB RRB
  126 primary_literal: . INT
  127                | . DOUBLE
  128                | . CHAR_LITERAL
  129                | . STRING_LITERAL
  130                | . TRUE_TOK
  131                | . FALSE_TOK
  132                | . NULL_TOK
  133 primary_assoc: . primary_faccess
  134              | . primary_mcall
  135 primary_faccess: . primary DOT IDENT
  136 primary_mcall: . primary_maccess typename_group LRB argument_list RRB
  137              | . primary_maccess typename_group LRB RRB
  138 primary_maccess: . primary_nobrace

    CHAR_LITERAL    shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    INT             shift, and go to state 4
    DOUBLE          shift, and go to state 5
    THIS            shift, and go to state 12
    SUPER           shift, and go to state 13
    TRUE_TOK        shift, and go to state 14
    FALSE_TOK       shift, and go to state 15
    NULL_TOK        shift, and go to state 16
    NEW             shift, and go to state 17
    '('             shift, and go to state 28

    postfix          go to state 69
    primary          go to state 68
    primary_nobrace  go to state 48
    primary_literal  go to state 49
    primary_assoc    go to state 50
    primary_faccess  go to state 51
    primary_mcall    go to state 52
    primary_maccess  go to state 53


state 9

  113 prefix: DEC . postfix
  114 postfix: . primary
  115        | . primary INC
  116        | . primary DEC
  117        | . primary AS typename_T
  118 primary: . primary_nobrace
  119        | . '(' expression ')'
  120 primary_nobrace: . primary_literal
  121                | . primary_assoc
  122                | . THIS
  123                | . SUPER
  124                | . NEW typename_T LRB argument_list RRB
  125                | . NEW typename_T LRB RRB
  126 primary_literal: . INT
  127                | . DOUBLE
  128                | . CHAR_LITERAL
  129                | . STRING_LITERAL
  130                | . TRUE_TOK
  131                | . FALSE_TOK
  132                | . NULL_TOK
  133 primary_assoc: . primary_faccess
  134              | . primary_mcall
  135 primary_faccess: . primary DOT IDENT
  136 primary_mcall: . primary_maccess typename_group LRB argument_list RRB
  137              | . primary_maccess typename_group LRB RRB
  138 primary_maccess: . primary_nobrace

    CHAR_LITERAL    shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    INT             shift, and go to state 4
    DOUBLE          shift, and go to state 5
    THIS            shift, and go to state 12
    SUPER           shift, and go to state 13
    TRUE_TOK        shift, and go to state 14
    FALSE_TOK       shift, and go to state 15
    NULL_TOK        shift, and go to state 16
    NEW             shift, and go to state 17
    '('             shift, and go to state 28

    postfix          go to state 70
    primary          go to state 68
    primary_nobrace  go to state 48
    primary_literal  go to state 49
    primary_assoc    go to state 50
    primary_faccess  go to state 51
    primary_mcall    go to state 52
    primary_maccess  go to state 53


state 10

   19 import: IMPORT . STRING_LITERAL

    STRING_LITERAL  shift, and go to state 71


state 11

  154 inferenced_type_init_stmt: VAR . IDENT ASSIGN expression stmt_term

    IDENT  shift, and go to state 72


state 12

  122 primary_nobrace: THIS .

    $default  reduce using rule 122 (primary_nobrace)


state 13

  123 primary_nobrace: SUPER .

    $default  reduce using rule 123 (primary_nobrace)


state 14

  130 primary_literal: TRUE_TOK .

    $default  reduce using rule 130 (primary_literal)


state 15

  131 primary_literal: FALSE_TOK .

    $default  reduce using rule 131 (primary_literal)


state 16

  132 primary_literal: NULL_TOK .

    $default  reduce using rule 132 (primary_literal)


state 17

   77 typename_T: . fqcn_part typename_group
   78 fqcn_part: . IDENT
   79          | . fqcn_part COLO_COLO IDENT
  124 primary_nobrace: NEW . typename_T LRB argument_list RRB
  125                | NEW . typename_T LRB RRB

    IDENT  shift, and go to state 6

    typename_T  go to state 73
    fqcn_part   go to state 35


state 18

   54 function_define: DEF . IDENT LRB parameter_list RRB ARROW typename_T scope_optional
   55                | DEF . IDENT LRB RRB ARROW typename_T scope_optional

    IDENT  shift, and go to state 74


state 19

    7 namespace_decl: NAMESPACE . namespace_path namespace_body
   17 namespace_path: . IDENT
   18               | . namespace_path DOT IDENT

    IDENT  shift, and go to state 75

    namespace_path  go to state 76


state 20

   80 expression: . assign
   81 assign: . or
   82       | . primary assign_type_T assign
   89 or: . and
   90   | . or LOGIC_OR and
   91 and: . equal
   92    | . and LOGIC_AND equal
   93 equal: . compare
   94      | . equal EQUAL compare
   95      | . equal NOTEQUAL compare
   96 compare: . addsub
   97        | . compare GT addsub
   98        | . compare GE addsub
   99        | . compare LT addsub
  100        | . compare LE addsub
  101 addsub: . muldiv
  102       | . addsub ADD muldiv
  103       | . addsub SUB muldiv
  104 muldiv: . unary
  105       | . muldiv MUL unary
  106       | . muldiv DIV unary
  107       | . muldiv MOD unary
  108 unary: . prefix
  109      | . NOT unary
  110      | . '-' unary
  111 prefix: . postfix
  112       | . INC postfix
  113       | . DEC postfix
  114 postfix: . primary
  115        | . primary INC
  116        | . primary DEC
  117        | . primary AS typename_T
  118 primary: . primary_nobrace
  119        | . '(' expression ')'
  120 primary_nobrace: . primary_literal
  121                | . primary_assoc
  122                | . THIS
  123                | . SUPER
  124                | . NEW typename_T LRB argument_list RRB
  125                | . NEW typename_T LRB RRB
  126 primary_literal: . INT
  127                | . DOUBLE
  128                | . CHAR_LITERAL
  129                | . STRING_LITERAL
  130                | . TRUE_TOK
  131                | . FALSE_TOK
  132                | . NULL_TOK
  133 primary_assoc: . primary_faccess
  134              | . primary_mcall
  135 primary_faccess: . primary DOT IDENT
  136 primary_mcall: . primary_maccess typename_group LRB argument_list RRB
  137              | . primary_maccess typename_group LRB RRB
  138 primary_maccess: . primary_nobrace
  165 return_stmt: RETURN . expression stmt_term

    CHAR_LITERAL    shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    INT             shift, and go to state 4
    DOUBLE          shift, and go to state 5
    NOT             shift, and go to state 7
    INC             shift, and go to state 8
    DEC             shift, and go to state 9
    THIS            shift, and go to state 12
    SUPER           shift, and go to state 13
    TRUE_TOK        shift, and go to state 14
    FALSE_TOK       shift, and go to state 15
    NULL_TOK        shift, and go to state 16
    NEW             shift, and go to state 17
    '-'             shift, and go to state 27
    '('             shift, and go to state 28

    expression       go to state 77
    assign           go to state 37
    or               go to state 38
    and              go to state 39
    equal            go to state 40
    compare          go to state 41
    addsub           go to state 42
    muldiv           go to state 43
    unary            go to state 44
    prefix           go to state 45
    postfix          go to state 46
    primary          go to state 47
    primary_nobrace  go to state 48
    primary_literal  go to state 49
    primary_assoc    go to state 50
    primary_faccess  go to state 51
    primary_mcall    go to state 52
    primary_maccess  go to state 53


state 21

  155 if_stmt: IF . LRB expression RRB scope
  156        | IF . LRB expression RRB scope ELSE scope
  157        | IF . LRB expression RRB scope elif_list
  158        | IF . LRB expression RRB scope elif_list ELSE scope

    LRB  shift, and go to state 78


state 22

  162 while_stmt: WHILE . LRB expression RRB scope_optional

    LRB  shift, and go to state 79


state 23

  163 break_stmt: BREAK . stmt_term
  175 stmt_term: . SEMI
  176          | .  [$end, CHAR_LITERAL, STRING_LITERAL, INT, DOUBLE, IDENT, NOT, INC, DEC, RCB, VAR, THIS, SUPER, TRUE_TOK, FALSE_TOK, NULL_TOK, NEW, RETURN, IF, WHILE, BREAK, CONTINUE, TRY, THROW, '-', '(']

    SEMI  shift, and go to state 80

    $default  reduce using rule 176 (stmt_term)

    stmt_term  go to state 81


state 24

  164 continue_stmt: CONTINUE . stmt_term
  175 stmt_term: . SEMI
  176          | .  [$end, CHAR_LITERAL, STRING_LITERAL, INT, DOUBLE, IDENT, NOT, INC, DEC, RCB, VAR, THIS, SUPER, TRUE_TOK, FALSE_TOK, NULL_TOK, NEW, RETURN, IF, WHILE, BREAK, CONTINUE, TRY, THROW, '-', '(']

    SEMI  shift, and go to state 80

    $default  reduce using rule 176 (stmt_term)

    stmt_term  go to state 82


state 25

  167 try_stmt: TRY . scope catch_stmt_list
  171 scope: . LCB stmt_list RCB
  172      | . LCB RCB

    LCB  shift, and go to state 83

    scope  go to state 84


state 26
